fix some bad links

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -21,9 +21,9 @@
         <nav class="center-nav">
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="html/catigories.html">Categories</a></li>
-                <li><a href="html/aboutus.html">About</a></li>
-                <li><a href="html/contactus.html">Contact</a></li>
+                <li><a href="categories.html">Categories</a></li>
+                <li><a href="aboutus.html">About</a></li>
+                <li><a href="contactus.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -47,8 +47,8 @@
     </section>
 
     <!-- Footer -->
-    <footer bgcolor="#1a1a1a">
-        <div class="footer-container" align="center">
+    <footer bgcolor="#1a1a1a" align="center">
+        <div class="footer-container">
             <!-- Brand / Logo -->
             <div class="footer-section about">
                 <h2 class="logo">Torque<span>Zone</span></h2>
