--- a/html/templete.html
+++ b/html/templete.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Famous Car Brands</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link href="stylesheet" href="../css/footer.css" rel="stylesheet">
-    <link href="stylesheet" href="../css/header.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="../assets/images/logos/OurLogo.png">
 </head>
 
@@ -39,52 +37,69 @@
     
 
 
-    <footer>
-        <div class="footer-container">
-
-            <!-- Brand / Logo -->
-            <div class="footer-section about">
-                <h2 class="logo">Torque<span>Zone</span></h2>
+   <footer class="footer" align="center">
+  <div class="footer-container">
+    
+    <!-- Logo / Short intro -->
+    <div class="footer-col" >
+      <h2 class="logo">Torque<span>Zone</span></h2>
                 <p>Drive your passion. Discover the world’s most iconic car brands and innovations in one place.</p>
-            </div>
+    </div>
 
-            <!-- Quick Links -->
-            <div class="footer-section links">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="categories.html">Categories</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <!-- Explore -->
-            <div class="footer-section explore">
-                <h3>Explore</h3>
-                <ul>
-                    <li><a href="#">Latest Models</a></li>
-                    <li><a href="#">Car Reviews</a></li>
-                    <li><a href="#">News & Trends</a></li>
-                    <li><a href="#">Events</a></li>
-                </ul>
-            </div>
-            <!-- Social Media -->
-            <div class="footer-section social">
-                <h3>Follow Us</h3>
-                <div class="social-icons">
-                    <a href="#"><img src="assets/images/logos/facebook.png" alt="Facebook" width="24" height="24"></a>
-                    <a href="#"><img src="assets/images/logos/x.png" alt="X" width="24" height="24"></a>
-                    <a href="#"><img src="assets/images/logos/instegram.png" alt="Instagram" width="24" height="24"></a>
-                    <a href="#"><img src="assets/images/logos/youtube.png" alt="YouTube" width="24" height="24"></a>
-                </div>
-            </div>
-        </div>
+    <section class="ttt" align="center">
+    <!-- Cars -->
+    <div class="footer-col">
+      <ul>
+        <li><h3>Cars</h3></li>
+        <li><a href="models.html">All Models</a></li>
+        <li><a href="categories.html">Categories</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+      </ul>
+    </div>
 
-        <!-- Bottom -->
-        <div class="footer-bottom">
-            <p>© 2025 TorqueZone. All Rights Reserved.</p>
-        </div>
-    </footer>
+    <!-- Resources -->
+    <div class="footer-col">
+      <ul>
+        <li><h3> Resources</h3></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="#">Financing</a></li>
+        <li><a href="#">Car Care Tips</a></li>
+        <li><a href="#">News & Reviews</a></li>
+      </ul>
+    </div>
+
+    <!-- About -->
+    <div class="footer-col">
+      <ul>
+        <li><h3>About</h3></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms of Service</a></li>
+      </ul>
+    </div>
+    <div class="clr"></div>
+    </div>
+
+    <!-- Newsletter -->
+    <div class="footer-col newsletter">
+      <h3>Never miss an update</h3>
+      <p>Get the latest car news, reviews, and updates delivered to your inbox.</p>
+      <form>
+        <input class="email-input" type="email" placeholder="Enter your email" required >
+        <button type="submit" class="btn">Subscribe</button>
+      </form>
+    </div>
+
+</section>
+
+  <!-- Bottom -->
+  <div class="footer-bottom">
+    <p>© 2025 TorqueZone. All Rights Reserved.</p>
+  </div>
+</footer>
+
 
 </body>
 
