--- a/html/contactus.html
+++ b/html/contactus.html
@@ -22,8 +22,8 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="categories.html">Categories</a></li>
-                <li><a href="aboutus.html">About</a></li>
-                <li><a href="contactus.html">Contact</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
             </ul>
         </nav>
 
