--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -6,9 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | TorqueZone</title>
     <link rel="stylesheet" href="../css/aboutus.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="icon" type="image/x-icon" href="../assets/images/logos/favicon.ico">
 </head>
 
 <body>
+    <header class="header">
+    <div class="logo">
+        Torque<span>Zone</span>
+    </div>
+    
+    <nav class="center-nav">
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="categories.html">Categories</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+        </ul>
+    </nav>
+    
+    <div class="auth-buttons">
+        <a href="html/signup.html" class="btn">Sign Up</a>
+        <a href="html/login.html" class="btn secondary">Login</a>
+    </div>
+    </header>
 
     <section class="about-hero">
         <div class="overlay"></div>
