--- a/html/luxury-logo.html
+++ b/html/luxury-logo.html
@@ -106,7 +106,7 @@
             <p>Get the latest car news, reviews, and updates delivered to your inbox.</p>
             <form>
                 <input class="email-input" type="email" placeholder="Enter your email" required >
-                <button type="submit" class="btn">Subscribe</button>
+                <button type="submit" class="footer-btn">Subscribe</button>
             </form>
             <div class="footer-social">
                 <h3>Follow Us</h3>
