--- a/html/login.html
+++ b/html/login.html
@@ -13,9 +13,9 @@
 
     <div class="login-container">
         <h1>Welcome Back</h1>
-        <p>Login to <span>TorqueZone</span> and continue the journey!</p>
+        <p>Login to <span>Torque<span style="color: red;">Zone</span></span> and continue the journey!</p>
 
-        <form action="#" method="post" class="login-form">
+        <form action="../index.html" method="post" class="login-form">
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="Enter your email" required>
