--- a/html/signup.html
+++ b/html/signup.html
@@ -12,9 +12,9 @@
 
     <div class="signup-container">
         <h1>Create Account</h1>
-        <p>Join <span>TorqueZone</span> and explore the world of cars!</p>
+        <p>Join <span>Torque<span style="color: red;">Zone</span></span> and explore the world of cars!</p>
 
-        <form action="#" method="post" class="signup-form">
+        <form action="../index.html" method="post" class="signup-form">
 
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" placeholder="Enter your full name" required>
