--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         <div class="footer-col footer-newsletter">
             <h3>Never miss an update</h3>
             <p>Get the latest car news, reviews, and updates delivered to your inbox.</p>
-            <form>
+            <form class="footer-newsletter">
                 <input class="email-input" type="email" placeholder="Enter your email" required >
-                <button type="submit" class="btn">Subscribe</button>
+                <button type="submit" class="footer-btn">Subscribe</button>
             </form>
             <div class="footer-social">
                 <h3>Follow Us</h3>
