avoid unlinked links

--- a/html/categories.html
+++ b/html/categories.html
@@ -108,16 +108,16 @@
         <div class="footer-col">
             <h3>Cars</h3>
             <ul>
-                <li><a href="models.html">All Models</a></li>
+                <li><a href="#">All Models</a></li>
                 <li><a href="categories.html">Categories</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="#">Gallery</a></li>
             </ul>
         </div>
 
         <div class="footer-col">
             <h3>Resources</h3>
             <ul>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="#">Services</a></li>
                 <li><a href="#">Financing</a></li>
                 <li><a href="#">Car Care Tips</a></li>
                 <li><a href="#">News & Reviews</a></li>
@@ -127,8 +127,8 @@
         <div class="footer-col">
             <h3>About</h3>
             <ul>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Service</a></li>
@@ -138,7 +138,7 @@
         <div class="footer-col footer-newsletter">
             <h3>Never miss an update</h3>
             <p>Get the latest car news, reviews, and updates delivered to your inbox.</p>
-            <form>
+            <form class="footer-newsletter">
                 <input class="email-input" type="email" placeholder="Enter your email" required >
                 <button type="submit" class="footer-btn">Subscribe</button>
             </form>
