--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
         <div class="footer-col">
             <h3>Cars</h3>
             <ul>
-                <li><a href="models.html">All Models</a></li>
-                <li><a href="categories.html">Categories</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="#">All Models</a></li>
+                <li><a href="html/categories.html">Categories</a></li>
+                <li><a href="#">Gallery</a></li>
             </ul>
         </div>
 
         <div class="footer-col">
             <h3>Resources</h3>
             <ul>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="#">Services</a></li>
                 <li><a href="#">Financing</a></li>
                 <li><a href="#">Car Care Tips</a></li>
                 <li><a href="#">News & Reviews</a></li>
@@ -100,8 +100,8 @@
         <div class="footer-col">
             <h3>About</h3>
             <ul>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="html/aboutus.html">About Us</a></li>
+                <li><a href="html/contactus.html">Contact Us</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Service</a></li>
