--- a/html/templete.html
+++ b/html/templete.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Famous Car Brands</title>
-    <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="icon" type="image/png" href="../assets/images/logos/OurLogo.png">
 </head>
 
@@ -19,9 +21,9 @@
         <nav class="center-nav">
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="html/catigories.html">Categories</a></li>
-                <li><a href="html/about.html">About</a></li>
-                <li><a href="html/contact.html">Contact</a></li>
+                <li><a href="categories.html">Categories</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
             </ul>
         </nav>
 
@@ -31,13 +33,8 @@
         </div>
     </header>
 
-    <a href="#top" class="floating-top">⬆</a>
-
-    
-
-
-   <footer class="footer">
-    <div class="footer-container">
+    <footer class="footer">
+        <div class="footer-container">
 
         <div class="footer-col" >
             <h2 class="logo">Torque<span>Zone</span></h2>
@@ -47,16 +44,16 @@
         <div class="footer-col">
             <h3>Cars</h3>
             <ul>
-                <li><a href="models.html">All Models</a></li>
+                <li><a href="#">All Models</a></li>
                 <li><a href="categories.html">Categories</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="#">Gallery</a></li>
             </ul>
         </div>
 
         <div class="footer-col">
             <h3>Resources</h3>
             <ul>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="#">Services</a></li>
                 <li><a href="#">Financing</a></li>
                 <li><a href="#">Car Care Tips</a></li>
                 <li><a href="#">News & Reviews</a></li>
@@ -66,8 +63,8 @@
         <div class="footer-col">
             <h3>About</h3>
             <ul>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Service</a></li>
@@ -77,9 +74,9 @@
         <div class="footer-col footer-newsletter">
             <h3>Never miss an update</h3>
             <p>Get the latest car news, reviews, and updates delivered to your inbox.</p>
-            <form>
+            <form class="footer-newsletter">
                 <input class="email-input" type="email" placeholder="Enter your email" required >
-                <button type="submit" class="btn">Subscribe</button>
+                <button type="submit" class="footer-btn">Subscribe</button>
             </form>
             <div class="footer-social">
                 <h3>Follow Us</h3>
@@ -98,8 +95,6 @@
         <p>© 2025 TorqueZone. All Rights Reserved.</p>
     </div>
     </footer>
-
-
 </body>
 
 </html>
