--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -26,8 +26,8 @@
     </nav>
     
     <div class="auth-buttons">
-        <a href="html/signup.html" class="btn">Sign Up</a>
-        <a href="html/login.html" class="btn secondary">Login</a>
+        <a href="signup.html" class="btn">Sign Up</a>
+        <a href="login.html" class="btn secondary">Login</a>
     </div>
     </header>
 
