--- a/html/electric-cars-logo.html
+++ b/html/electric-cars-logo.html
@@ -25,8 +25,8 @@
         </nav>
     
         <div class="auth-buttons">
-            <a href="html/signup.html" class="btn">Sign Up</a>
-            <a href="html/login.html" class="btn secondary">Login</a>
+            <a href="signup.html" class="btn">Sign Up</a>
+            <a href="login.html" class="btn secondary">Login</a>
         </div>
     </header>
    
